Add authoriazation to patient service request
